# speckit-breakdown

./: .gitignore  AGENT.md  GET_STARTED.md  HOW_TO_USE.md  INSTALLATION_GUIDE.md  LICENSE  QUICK_START.md  README.md  SETUP_AS_REPO.md  SPECKIT_BREAKDOWN_OVERVIEW.md  VERSION  install-auto-detect.sh  install-local.sh  install-old.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  setup.py
audit_tasks/: 001_postgres_support_tier_and_gating.md  002_postgres_schema_contract_and_read_alignment.md  003_replace_postgres_heuristic_name_matching_with_stable_ids.md  004_replace_placeholder_pass_stubs_with_real_behavior_or_fail_fast.md  005_make_persistence_transactional_per_run.md  006_enable_sqlite_foreign_keys_and_strengthen_schema_constraints.md  007_implement_postgres_verify_schema_or_fail_fast.md  008_split_datastoregateway_into_protocol_and_backend_implementations.md  009_reduce_connection_churn_and_add_batching_for_db_operations.md  010_make_step_order_computation_scalable.md  011_split_feature_parser_into_feature_spec_task_parsers.md  012_make_yaml_parsing_deterministic.md  013_add_python_cli_packaging_and_runtime_dependencies.md  014_document_support_matrix_and_python_cli_usage.md  015_improve_installer_supply_chain_guidance.md  016_add_end_to_end_tests_for_workflow_generated_outputs.md  017_align_validation_rules_and_fail_fast_on_critical_parse_errors.md  018_fix_typing_in_upsertservice_and_bootstrapsummary.md  019_align_hard_rules_with_codebase_or_enforce_limits.md  MASTER_TASKLIST.md  (+1 more)
docs/: AGENT_GUIDE.md  AGENT_INDEX.md  (+15 more)
(+227 files in other folders)
