[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckit-breakdown"
version = "0.1.0"
description = "Agentic decomposition and specification tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "PyYAML>=6.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "rich>=10.0.0",
    "shellingham>=1.3.0"
]

[project.scripts]
speckit = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
